syntax = "proto3";

option csharp_namespace = "NimbleFlowHub.Contracts";

import "google/protobuf/empty.proto";

package tableHubPublisher;

service TableHubPublisher {
  rpc PublishTableCreated (PublishTableValue) returns (google.protobuf.Empty);
  rpc PublishTableUpdated (PublishTableValue) returns (google.protobuf.Empty);
  rpc PublishManyTablesDeleted (PublishTableIds) returns (google.protobuf.Empty);
  rpc PublishTableDeleted (PublishTableId) returns (google.protobuf.Empty);
}

message PublishTableIds {
  repeated string ids = 1;
}

message PublishTableId {
  string id = 1;
}

message PublishTableValue {
  string id = 1;
  string accountable = 2;
  bool is_fully_paid = 3;
}